--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "NRD",
   "license": "GPL-3.0",
   "dependencies": {
+    "fs-extra": "^10.0.0",
     "readline": "^1.3.0",
     "shelljs": "^0.8.5"
   }
