--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
   "author": "NRD",
   "license": "GPL-3.0",
   "dependencies": {
-    "fs-extra": "^10.0.0",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "db": "^3.3.1",
+    "discord-api-types": "^0.27.3",
+    "discord.js": "^13.6.0",
+    "discord.js-reaction-menu": "^1.1.2",
+    "ffmpeg": "^0.0.4",
+    "fs-extra": "^10.0.1",
+    "one-liner-joke": "^1.2.2",
     "readline": "^1.3.0",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "superagent": "^7.1.2"
   }
 }
