--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "chalk": "^5.0.1",
+    "cli-color": "^2.0.2",
     "db": "^3.3.1",
     "discord-api-types": "^0.27.3",
     "discord.js": "^13.6.0",
